--- a/MovieDB/templates/browse_actor.html
+++ b/MovieDB/templates/browse_actor.html
@@ -1,32 +1,32 @@
 {% extends 'browse_base.html' %}
 {% load staticfiles %}
+
+{% block panel_heading_icon %}
+    <span class="glyphicon glyphicon-user"></span>
+{% endblock %}
+
 {% block paged_content %}
-    <div class="panel panel-dark text-left">
-        <div class="panel-heading">
-            <h2><span class="glyphicon glyphicon-user"></span> {{ results_header }}</h2>
-        </div>
-        <div class="list-group">
-            {% for actor in page %}
-                <a class="list-group-item" href={% url 'ActorDetail' actor.id %}>
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="media-left">
-                                <img class="media-object img-circle" height="128" src="{% static 'img/default_person.png' %}">
-                            </div>
-                            <div class="media-body">
-                                <h3 class="media-heading text-primary text-capitalize">{{ actor.get_full_name }}</h3>
-                                <strong>DOB: </strong> {{ actor.dob }}
-                                {% if actor.dod %}
-                                    </br>
-                                    <strong>DOD: </strong> {{ actor.dod }}
-                                {% endif %}
+    <div class="list-group">
+        {% for actor in page %}
+            <a class="list-group-item" href={% url 'ActorDetail' actor.id %}>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="media-left">
+                            <img class="media-object img-circle" height="128" src="{% static 'img/default_person.png' %}">
+                        </div>
+                        <div class="media-body">
+                            <h3 class="media-heading text-primary text-capitalize">{{ actor.get_full_name }}</h3>
+                            <strong>DOB: </strong> {{ actor.dob }}
+                            {% if actor.dod %}
                                 </br>
-                                <strong>Sex: </strong> {{ actor.sex }}
-                            </div>
+                                <strong>DOD: </strong> {{ actor.dod }}
+                            {% endif %}
+                            </br>
+                            <strong>Sex: </strong> {{ actor.sex }}
                         </div>
                     </div>
-                </a>
-            {% endfor %}
-        </div>
+                </div>
+            </a>
+        {% endfor %}
     </div>
 {% endblock %}
