--- a/MovieDB/templates/browse_director.html
+++ b/MovieDB/templates/browse_director.html
@@ -1,30 +1,30 @@
 {% extends 'browse_base.html' %}
 {% load staticfiles %}
+
+{% block panel_heading_icon %}
+    <span class="glyphicon glyphicon-bullhorn"></span>
+{% endblock %}
+
 {% block paged_content %}
-    <div class="panel panel-dark text-left">
-        <div class="panel-heading">
-            <h2><span class="glyphicon glyphicon-bullhorn"></span> {{ results_header }}</h2>
-        </div>
-        <div class="list-group">
-            {% for director in page %}
-                <a class="list-group-item" href={% url 'DirectorDetail' director.id %}>
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="media-left">
-                                <img class="media-object img-circle" height="128" src="{% static 'img/default_person.png' %}">
-                            </div>
-                            <div class="media-body">
-                                <h3 class="media-heading text-primary text-capitalize">{{ director.get_full_name }}</h3>
-                                <strong>DOB:</strong> {{ director.dob }}
-                                {% if director.dod %}
-                                    </br>
-                                    <strong>DOD: </strong> {{ director.dod }}
-                                {% endif %}
-                            </div>
+    <div class="list-group">
+        {% for director in page %}
+            <a class="list-group-item" href={% url 'DirectorDetail' director.id %}>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="media-left">
+                            <img class="media-object img-circle" height="128" src="{% static 'img/default_person.png' %}">
+                        </div>
+                        <div class="media-body">
+                            <h3 class="media-heading text-primary text-capitalize">{{ director.get_full_name }}</h3>
+                            <strong>DOB:</strong> {{ director.dob }}
+                            {% if director.dod %}
+                                </br>
+                                <strong>DOD: </strong> {{ director.dod }}
+                            {% endif %}
                         </div>
                     </div>
-                </a>
-            {% endfor %}
-        </div>
+                </div>
+            </a>
+        {% endfor %}
     </div>
 {% endblock %}
