Modified model and reflected in new migrations.

--- a/MovieDB/templates/actor_detail.html
+++ b/MovieDB/templates/actor_detail.html
@@ -6,7 +6,7 @@
 
         <div class="panel panel-dark text-left">
             <div class="panel-heading">
-                <h2 class="">{{ actor.get_full_name }}</h2>
+                <h2 class="">{{ actor.get_full_name }} <em>(Actor)</em></h2>
             </div>
             <div class="list-group">
                 {# details #}
