--- a/MovieDB/templates/director_detail.html
+++ b/MovieDB/templates/director_detail.html
@@ -6,7 +6,7 @@
 
         <div class="panel panel-dark text-left">
             <div class="panel-heading">
-                <h2 class="">{{ director.get_full_name }}</h2>
+                <h2 class="">{{ director.get_full_name }} <em>(Director)</em></h2>
             </div>
             <div class="list-group">
                 {# details #}
@@ -35,7 +35,7 @@
                 </div>
                 {# movies #}
                 <div class="list-group-item">
-                    <h3 class="list-group-item-heading text-capitalize ">Movies</h3>
+                    <h3 class="list-group-item-heading text-capitalize ">Movies Directed</h3>
                     {% if movies %}
                         <table class="table table-condensed table-striped no-border">
                             <th class="text-info">Movie</th>
