Using details_base template for all details pages

--- a/MovieDB/templates/actor_detail.html
+++ b/MovieDB/templates/actor_detail.html
@@ -1,70 +1,65 @@
-{% extends 'base.html' %}
+{% extends 'details_base.html' %}
 {% load staticfiles %}
-{% block main_block %}
-    <div class="container">
-        <h1>{{ page_header }}</h1>
 
-        <div class="panel panel-dark text-left">
-            <div class="panel-heading">
-                <h2 class="">{{ actor.get_full_name }} <em>(Actor)</em></h2>
-            </div>
-            <div class="list-group">
-                {# details #}
-                <div class="list-group-item">
-                    <div class="media">
-                        <div class="media-left media-top">
-                            <img class="media-object img-circle" src="{% static 'img/default_person.png' %}">
-                        </div>
-                        <div class="media-body">
-                            <Table class="table table-condensed no-border" border="0">
-                                <tr>
-                                    <td></td>
-                                    <td><h4><strong>DOB</strong></h4></td>
-                                    <td><h4>{{ actor.dob }}</h4></td>
-                                </tr>
-                                {% if actor.dod %}
-                                <tr>
-                                    <td></td>
-                                    <td><h4><strong>DOD</strong></h4></td>
-                                    <td><h4>{{ actor.dod }}</h4></td>
-                                </tr>
-                                {% endif %}
-                                <tr>
-                                    <td></td>
-                                    <td><h4><strong>Sex</strong></h4></td>
-                                    <td><h4>{{ actor.sex }}</h4></td>
-                                </tr>
-                            </Table>
-                        </div>
-                    </div>
+{% block panel_heading %}
+    {{ actor.get_full_name }} <em>(Actor)</em>
+{% endblock %}
+
+{% block details_content %}
+    <div class="list-group">
+        {# details #}
+        <div class="list-group-item">
+            <div class="media">
+                <div class="media-left media-top">
+                    <img class="media-object img-circle" src="{% static 'img/default_person.png' %}">
                 </div>
-                {# movies #}
-                <div class="list-group-item">
-                    <h3 class="list-group-item-heading text-capitalize ">Movies</h3>
-                    {% if movies %}
-                        <table class="table table-condensed table-striped no-border">
-                            <th class="text-info">Movie</th>
-                            <th class="text-info">Year</th>
-                            {% for movie in movies %}
-                                <tr>
-                                    <td>
-                                        <a class="text-primary text-capitalize" href="{% url 'MovieDetail' movie.mid.id %}">
-                                            <img class="" src="{% static 'img/default_movie.png' %}" height="36">
-                                            {{ movie.mid.get_cleaned_title }}
-                                        </a>
-                                    </td>
-                                    <td>
-                                        {{ movie.mid.year }}
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </table>
-                    {% else %}
-                        <h4 class="text-muted"><em>No movies to display</em></h4>
-                    {% endif %}
+                <div class="media-body">
+                    <Table class="table table-condensed no-border" border="0">
+                        <tr>
+                            <td></td>
+                            <td><h4><strong>DOB</strong></h4></td>
+                            <td><h4>{{ actor.dob }}</h4></td>
+                        </tr>
+                        {% if actor.dod %}
+                        <tr>
+                            <td></td>
+                            <td><h4><strong>DOD</strong></h4></td>
+                            <td><h4>{{ actor.dod }}</h4></td>
+                        </tr>
+                        {% endif %}
+                        <tr>
+                            <td></td>
+                            <td><h4><strong>Sex</strong></h4></td>
+                            <td><h4>{{ actor.sex }}</h4></td>
+                        </tr>
+                    </Table>
                 </div>
             </div>
         </div>
-
+        {# movies #}
+        <div class="list-group-item">
+            <h3 class="list-group-item-heading text-capitalize ">Movies</h3>
+            {% if movies %}
+                <table class="table table-condensed table-striped no-border">
+                    <th class="text-info">Movie</th>
+                    <th class="text-info">Year</th>
+                    {% for movie in movies %}
+                        <tr>
+                            <td>
+                                <a class="text-primary text-capitalize" href="{% url 'MovieDetail' movie.mid.id %}">
+                                    <img class="" src="{% static 'img/default_movie.png' %}" height="36">
+                                    {{ movie.mid.get_cleaned_title }}
+                                </a>
+                            </td>
+                            <td>
+                                {{ movie.mid.year }}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            {% else %}
+                <h4 class="text-muted"><em>No movies to display</em></h4>
+            {% endif %}
+        </div>
     </div>
 {% endblock %}
