--- a/MovieDB/templates/movie_detail.html
+++ b/MovieDB/templates/movie_detail.html
@@ -1,162 +1,157 @@
-{% extends 'base.html' %}
+{% extends 'details_base.html' %}
 {% load staticfiles %}
-{% block main_block %}
-    <div class="container">
-        <h1>{{ page_header }}</h1>
 
-        <div class="panel panel-dark text-left">
-            <div class="panel-heading">
-                <h2 class="">{{ movie.get_cleaned_title }}</h2>
-            </div>
-            <div class="list-group">
-                {# Movie Details #}
-                <div class="list-group-item">
-                    <div class="media">
-                        <div class="media-left media-top">
-                            <img class="media-object" src="{% static 'img/default_movie.png' %}">
-                        </div>
-                        <div class="media-body">
-                            <Table class="table table-condensed no-border" border="0">
-                                <tr>
-                                    <td><h4><strong>Year</strong></h4></td>
-                                    <td><h4>{{ movie.year }}</h4></td>
-                                </tr>
-                                <tr>
-                                    <td><h4><strong>Company</strong></h4></td>
-                                    <td><h4>{{ movie.company }}</h4></td>
-                                </tr>
-                                <tr>
-                                    <td><h4><strong>MPAA Rating</strong></h4></td>
-                                    <td><h4>
-                                        {% if movie.rating == 'G' %}
-                                            <img src="{% static 'img/mpaa-icon_g.svg.png' %}" height="20">
-                                        {% elif movie.rating == 'PG' %}
-                                            <img src="{% static 'img/mpaa-icon_pg.svg.png' %}" height="20">
-                                        {% elif movie.rating == 'PG-13' %}
-                                            <img src="{% static 'img/mpaa-icon_pg-13.svg.png' %}" height="20">
-                                        {% elif movie.rating == 'R' %}
-                                            <img src="{% static 'img/mpaa-icon_r.svg.png' %}" height="20">
-                                        {% elif movie.rating == 'NC-17' %}
-                                            <img src="{% static 'img/mpaa-icon_nc-17.svg.png' %}" height="20">
-                                        {% elif movie.rating == 'surrendered' %}
-                                            <h4>Rating surrendered</h4>
-                                        {% endif %}
-                                    </h4></td>
-                                </tr>
-                                <tr>
-                                    <td><h4><strong>Avg. User Rating</strong></h4></td>
-                                    {% if avg_user_rating %}
-                                        <td><h4>{{ avg_user_rating }}</h4></td>
-                                    {% else %}
-                                        <td>
-                                            <h4 class="text-muted"><em>This movie has not yet been reviewed</em></h4>
-                                        </td>
-                                    {% endif %}
-                                </tr>
-                                <tr>
-                                    <td><h4><strong>Genres</strong></h4></td>
-                                    <td>
-                                    {% if genres %}
-                                        <h4>
-                                        {% for genre in genres %}
-                                            {{ genre }}
-                                        {% endfor %}
-                                        </h4>
-                                    {% else %}
-                                        <h4><em>No genres to display</em></h4>
-                                    {% endif %}
-                                    </td>
-                                </tr>
-                            </Table>
-                        </div>
-                    </div>
+{% block panel_heading %}
+    {{ movie.get_cleaned_title }}
+{% endblock %}
+
+{% block details_content %}
+    <div class="list-group">
+        {# Movie Details #}
+        <div class="list-group-item">
+            <div class="media">
+                <div class="media-left media-top">
+                    <img class="media-object" src="{% static 'img/default_movie.png' %}">
                 </div>
-                {# Directors #}
-                <div class="list-group-item">
-                    <h3 class="list-group-item-heading text-capitalize">Directors</h3>
-                    {% if directors %}
-                        <table class="table table-condensed table-striped no-border">
-                            {% for director in directors %}
-                                <tr>
-                                    <td>
-                                        <a class="text-primary text-capitalize" href="{% url 'DirectorDetail' director.did.id %}">
-                                            <img class="img-circle" src="{% static 'img/default_person.png' %}" width="24">
-                                            {{ director.did.get_full_name }}
-                                        </a>
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </table>
-                    {% else %}
-                        <h4 class="text-muted"><em>No directors to display</em></h4>
-                    {% endif %}
-                </div>
-                {# Actors #}
-                <div class="list-group-item">
-                    <h3 class="list-group-item-heading text-capitalize">Cast</h3>
-                    {% if actors %}
-                        <table class="table table-condensed table-striped no-border">
-                            <th class="text-info">Actor</th>
-                            <th class="text-info">Role</th>
-                            {% for actor in actors %}
-                                <tr>
-                                    <td>
-                                        <a class="text-primary text-capitalize" href="{% url 'ActorDetail' actor.aid.id %}">
-                                            <img class="img-circle" src="{% static 'img/default_person.png' %}" height="24">
-                                            {{ actor.aid.get_full_name }}
-                                        </a>
-                                    </td>
-                                    <td>
-                                        {{ actor.role }}
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </table>
-                    {% else %}
-                        <h4 class="text-muted"><em>No cast to display</em></h4>
-                    {% endif %}
-                </div>
-                {# Reviews #}
-                <div class="list-group-item">
-                    <h3 class="list-group-item-heading text-capitalize">Reviews</h3>
-                    {% if reviews %}
-                        {% for review in reviews %}
-                            <div class="bs-callout bs-callout-warning">
-                                <div class="media">
-                                    <div class="media-left media-top">
-                                        <img class="media-object"
-                                             width="56"
-                                             src="{% static 'img/default_person.png' %}">
-                                    </div>
-                                    <div class="media-body">
-                                        <h4 class="media-heading text-capitalize">{{ review.user_name }}</h4>
-                                        <small>{{ review.time }}</small>
-                                        </br>
-                                        <strong>Rating: </strong>{{ review.rating }}
-                                    </div>
-                                </div>
-                                <div>
-                                    <h5>{{ review.comment }}</h5>
-                                </div>
-                            </div>
-                        {% endfor %}
-                        <div class="row" align="center">
-                            <div class="col-lg-12">
-                                <a class="btn btn-default" href="{% url 'ViewReview' movie.id %}">View More</a>
-                                <a class="btn btn-success" href="{% url 'WriteReview' movie.id %}">Write a review</a>
-                            </div>
-                        </div>
-                    {% else %}
-                        <h4 class="text-muted"><em>No Reviews To display</em></h4>
-                        <div class="row" align="center">
-                            <div class="col-lg-12">
-                                <a class="btn btn-success" href="{% url 'WriteReview' movie.id %}">Write a review</a>
-                            </div>
-                        </div>
-                    {% endif %}
+                <div class="media-body">
+                    <Table class="table table-condensed no-border" border="0">
+                        <tr>
+                            <td><h4><strong>Year</strong></h4></td>
+                            <td><h4>{{ movie.year }}</h4></td>
+                        </tr>
+                        <tr>
+                            <td><h4><strong>Company</strong></h4></td>
+                            <td><h4>{{ movie.company }}</h4></td>
+                        </tr>
+                        <tr>
+                            <td><h4><strong>MPAA Rating</strong></h4></td>
+                            <td><h4>
+                                {% if movie.rating == 'G' %}
+                                    <img src="{% static 'img/mpaa-icon_g.svg.png' %}" height="20">
+                                {% elif movie.rating == 'PG' %}
+                                    <img src="{% static 'img/mpaa-icon_pg.svg.png' %}" height="20">
+                                {% elif movie.rating == 'PG-13' %}
+                                    <img src="{% static 'img/mpaa-icon_pg-13.svg.png' %}" height="20">
+                                {% elif movie.rating == 'R' %}
+                                    <img src="{% static 'img/mpaa-icon_r.svg.png' %}" height="20">
+                                {% elif movie.rating == 'NC-17' %}
+                                    <img src="{% static 'img/mpaa-icon_nc-17.svg.png' %}" height="20">
+                                {% elif movie.rating == 'surrendered' %}
+                                    <h4>Rating surrendered</h4>
+                                {% endif %}
+                            </h4></td>
+                        </tr>
+                        <tr>
+                            <td><h4><strong>Avg. User Rating</strong></h4></td>
+                            {% if avg_user_rating %}
+                                <td><h4>{{ avg_user_rating }}</h4></td>
+                            {% else %}
+                                <td>
+                                    <h4 class="text-muted"><em>This movie has not yet been reviewed</em></h4>
+                                </td>
+                            {% endif %}
+                        </tr>
+                        <tr>
+                            <td><h4><strong>Genres</strong></h4></td>
+                            <td>
+                            {% if genres %}
+                                <h4>
+                                {% for genre in genres %}
+                                    {{ genre }}
+                                {% endfor %}
+                                </h4>
+                            {% else %}
+                                <h4><em>No genres to display</em></h4>
+                            {% endif %}
+                            </td>
+                        </tr>
+                    </Table>
                 </div>
             </div>
         </div>
-
+        {# Directors #}
+        <div class="list-group-item">
+            <h3 class="list-group-item-heading text-capitalize">Directors</h3>
+            {% if directors %}
+                <table class="table table-condensed table-striped no-border">
+                    {% for director in directors %}
+                        <tr>
+                            <td>
+                                <a class="text-primary text-capitalize" href="{% url 'DirectorDetail' director.did.id %}">
+                                    <img class="img-circle" src="{% static 'img/default_person.png' %}" width="24">
+                                    {{ director.did.get_full_name }}
+                                </a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            {% else %}
+                <h4 class="text-muted"><em>No directors to display</em></h4>
+            {% endif %}
+        </div>
+        {# Actors #}
+        <div class="list-group-item">
+            <h3 class="list-group-item-heading text-capitalize">Cast</h3>
+            {% if actors %}
+                <table class="table table-condensed table-striped no-border">
+                    <th class="text-info">Actor</th>
+                    <th class="text-info">Role</th>
+                    {% for actor in actors %}
+                        <tr>
+                            <td>
+                                <a class="text-primary text-capitalize" href="{% url 'ActorDetail' actor.aid.id %}">
+                                    <img class="img-circle" src="{% static 'img/default_person.png' %}" height="24">
+                                    {{ actor.aid.get_full_name }}
+                                </a>
+                            </td>
+                            <td>
+                                {{ actor.role }}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            {% else %}
+                <h4 class="text-muted"><em>No cast to display</em></h4>
+            {% endif %}
+        </div>
+        {# Reviews #}
+        <div class="list-group-item">
+            <h3 class="list-group-item-heading text-capitalize">Reviews</h3>
+            {% if reviews %}
+                {% for review in reviews %}
+                    <div class="bs-callout bs-callout-warning">
+                        <div class="media">
+                            <div class="media-left media-top">
+                                <img class="media-object"
+                                     width="56"
+                                     src="{% static 'img/default_person.png' %}">
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading text-capitalize">{{ review.user_name }}</h4>
+                                <small>{{ review.time }}</small>
+                                </br>
+                                <strong>Rating: </strong>{{ review.rating }}
+                            </div>
+                        </div>
+                        <div>
+                            <h5>{{ review.comment }}</h5>
+                        </div>
+                    </div>
+                {% endfor %}
+                <div class="row" align="center">
+                    <div class="col-lg-12">
+                        <a class="btn btn-default" href="{% url 'ViewReview' movie.id %}">View More</a>
+                        <a class="btn btn-success" href="{% url 'WriteReview' movie.id %}">Write a review</a>
+                    </div>
+                </div>
+            {% else %}
+                <h4 class="text-muted"><em>No Reviews To display</em></h4>
+                <div class="row" align="center">
+                    <div class="col-lg-12">
+                        <a class="btn btn-success" href="{% url 'WriteReview' movie.id %}">Write a review</a>
+                    </div>
+                </div>
+            {% endif %}
+        </div>
     </div>
 {% endblock %}
