Minor changes to details and browse base templates for consistency.

--- a/MovieDB/templates/browse_base.html
+++ b/MovieDB/templates/browse_base.html
@@ -29,8 +29,7 @@
                     </h4>
                 </div>
                 <h2>
-                    {% block panel_heading_icon %}{% endblock %}
-                    {{ results_header }}
+                    {% block panel_heading %}{% endblock %}
                 </h2>
             </div>
 
